--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ console_error_panic_hook = "0.1.7"
 
 [dependencies.web-sys]
 version = "0.3"
-features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection']
+features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection', 'CssStyleDeclaration', 'Text']
 
