--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ serde = {version = "1.0.214", features = ["derive"]}
 ciborium = {version = "0.2.2"}
 base64 = "0.22.1"
 flate2 = "1.0.34"
-
+wasm-bindgen-futures = "0.4.45"
 [dependencies.web-sys]
 version = "0.3"
-features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection', 'CssStyleDeclaration', 'Text', 'DomTokenList', 'EventTarget', 'HtmlInputElement']
+features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection', 'CssStyleDeclaration', 'Text', 'DomTokenList', 'EventTarget', 'HtmlInputElement', 'Url', 'Clipboard', 'Navigator']
 
 
