--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,6 +22,8 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+
+
   # Single deploy job since we're just deploying
   deploy:
     environment:
@@ -29,8 +31,13 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - name: wasm
+        runs: cargo install wasm-pack
+      
       - name: Checkout
         uses: actions/checkout@v4
+      - name: build
+        runs: wasm-pack build --target=web
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
