--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,8 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: wasm
-        run: cd wasm
-        run: cargo install wasm-pack
+        run: cd wasm && cargo install wasm-pack
       
       - name: Checkout
         uses: actions/checkout@v4
