--- a/nyt_connections/Cargo.toml
+++ b/nyt_connections/Cargo.toml
@@ -17,6 +17,7 @@ base64 = "0.22.1"
 flate2 = "1.0.34"
 wasm-bindgen-futures = "0.4.45"
 thiserror = "2.0.3"
+yoke = {version = "0.7.4", features= ["derive"]}
 [dependencies.web-sys]
 version = "0.3"
 features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection', 'CssStyleDeclaration', 'Text', 'DomTokenList', 'EventTarget', 'HtmlInputElement', 'Url', 'Clipboard', 'Navigator', 'HtmlAnchorElement', 'HtmlDialogElement', 'UrlSearchParams']
