--- a/nyt_connections/Cargo.toml
+++ b/nyt_connections/Cargo.toml
@@ -16,9 +16,16 @@ serde = {version = "1.0.214", features = ["derive"], default-features=false}
 base64 = "0.22.1"
 flate2 = "1.0.34"
 wasm-bindgen-futures = "0.4.45"
+futures = "0.3.31"
 thiserror = "2.0.3"
 strum = {version = "0.26.3", features = ["derive"]}
 js-sys = "0.3.72"
+wasm-rs-async-executor = "0.9.0"
+gloo-timers = {version = "0.3.0", features = ["futures"]}
 [dependencies.web-sys]
 version = "0.3"
-features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection', 'CssStyleDeclaration', 'Text', 'DomTokenList', 'EventTarget', 'HtmlInputElement', 'Url', 'Clipboard', 'Navigator', 'HtmlAnchorElement', 'HtmlDialogElement', 'UrlSearchParams', 'Location', 'HtmlSpanElement']
+features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection', 'CssStyleDeclaration', 'Text', 'DomTokenList', 'EventTarget', 'HtmlInputElement', 'Url', 'Clipboard', 'Navigator', 'HtmlAnchorElement', 'HtmlDialogElement', 'UrlSearchParams', 'Location', 'HtmlSpanElement', 'HtmlBrElement', 'Animation', 'AnimationPlayState']
+
+
+
+
