--- a/nyt_connections/Cargo.toml
+++ b/nyt_connections/Cargo.toml
@@ -24,7 +24,7 @@ wasm-rs-async-executor = "0.9.0"
 gloo-timers = {version = "0.3.0", features = ["futures"]}
 [dependencies.web-sys]
 version = "0.3"
-features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection', 'CssStyleDeclaration', 'Text', 'DomTokenList', 'EventTarget', 'HtmlInputElement', 'Url', 'Clipboard', 'Navigator', 'HtmlAnchorElement', 'HtmlDialogElement', 'UrlSearchParams', 'Location', 'HtmlSpanElement', 'HtmlBrElement', 'Animation', 'AnimationPlayState']
+features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection', 'CssStyleDeclaration', 'Text', 'DomTokenList', 'EventTarget', 'HtmlInputElement', 'Url', 'Clipboard', 'Navigator', 'HtmlAnchorElement', 'HtmlDialogElement', 'UrlSearchParams', 'Location', 'HtmlSpanElement', 'HtmlBrElement', 'Animation', 'AnimationPlayState', 'HtmlTemplateElement', 'DocumentFragment']
 
 
 
