--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: build
-        run: make setup
+        run: make release
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
